fix stuck button animations on click

--- a/main.css
+++ b/main.css
@@ -227,7 +227,7 @@ footer{
   -webkit-transition-property: transform;
   transition-property: transform;
 }
-.button:hover, .button:focus, .button:active {
+.button:hover, .button:active {
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
